<resources>
    <string name="app_name">Tema4</string>
    <string name="quicktrade">QuickTrade</string>
    <string name="email">Email:</string>
    <string name="contrase_a">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="registrar">Registrar</string>
    <string name="nuevo_usuario">Nuevo Usuario</string>
    <string name="cancelar">Cancelar</string>
    <string name="datos_del_usuario">Datos del Usuario</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="nombre">Nombre</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="apellidos">Apellidos</string>
    <string name="dirrecci_n">Dirección</string>
    <string name="enviar">Enviar</string>
    <string name="modificar_datos">Modificar Datos</string>
    <string name="nodo_usuarios">usuarios</string>
    <string name="nodo_productos">productos</string>
    <string name="a_adir_producto">Añadir Producto</string>
    <string name="nombre_del_producto">Nombre del Producto</string>
    <string name="descripcion_del_producto">Descripcion del Producto</string>
    <string name="tecnolog_a">Tecnología</string>
    <string name="coches">Coches</string>
    <string name="hogar">Hogar</string>
    <string name="textview">TextView</string>
</resources>
